--- a/styles/global.css
+++ b/styles/global.css
@@ -13,7 +13,7 @@ body {
 }
 
 a {
-  color: #0070f3;
+  color: hsl(230, 55%, 58%);
   text-decoration: none;
 }
 
@@ -24,4 +24,15 @@ a:hover {
 img {
   max-width: 100%;
   display: block;
+}
+
+pre {
+  background: #f5f2f0;
+  border-radius: 5px;
+  font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console",
+    "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono",
+    "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier,
+    monospace;
+  overflow-x: auto;
+  padding: 1em;
 }
